--- a/.sequelizerc
+++ b/.sequelizerc
@@ -4,5 +4,5 @@ module.exports = {
   config: path.resolve("src", "config", "database.js"),
   "model-path": path.resolve("src", "app", "models"),
   "seeders-path": path.resolve("src", "database", "seeders"),
-  "smigrations-path": path.resolve("src", "database", "migrations"),
+  "migrations-path": path.resolve("src", "database", "migrations"),
 };
